# clang-checks

./: .gitmodules  CLANG_CHECKS_README.md  temp.out  test.cc
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/concept-synth/: CMakeLists.txt  ConceptSynth.cpp
clang-tools-extra/concept-synthesizer/: ConceptSynthesizer.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/move-adder/: CMakeLists.txt  MoveAdder.cpp
clang-tools-extra/move-adder/genetic-algo/: genetic-algo-store.hpp  include-visitor.hpp  move-bitmask.hpp  test-divider.hpp
concept-synth-scripts/: boost-error.py  compare-errors.py  counter-example.cc  run-on-cmake-project.py  std-doc.py  utils.py
concept-synth-scripts/cases/: test1-prep-fixed.cc  test1-prep.cc  test1.cc  test1.txt
concept-synth-scripts/prev/: counter-example.cc  gitignore-deactivated  run-on-cmake-project.py
extra-files/: boost-error.py  boost-src.cc  boostcmd.txt  boosttest.cc  counter-example.cc  dag.cc  dump-ast.sh  error-measurement-cmds.txt  measure-error-boost.sh  measure-error-stl.sh  measure-error.py  run-concept-synth.py  run-on-cmake-project.py  stdcmd.txt  test.cc  test.h
extra-files/paths/: boostpath.txt  stdpaths.txt
move-analysis-scripts/: a.out  addJson.py  driver.py  protobufParser.py  run-on-cmake-project.py  run.sh  testCmp.py
move-analysis-scripts/example/: a.out  test-move.cc  test-moveless.cc
move-analysis-scripts/move/: placeholder.txt
move-analysis-scripts/moveless/: placeholder.txt
move-analysis-scripts/test/: a.out  test.cc  test.h  test.hpp  test2.cc
(+11 files in other folders)
